--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,2 @@
 
-*/bin
-*/obj
-*/*.csproj.user
-*.suo
-*.sln.cache
-/.vs
-/.vscode
-
-/_output
-/ZipDeploy.TestApp2_1Exe/logs/
-/ZipDeploy.TestApp2_1/logs/
-/ZipDeploy.TestApp3_1/logs/
+App
