--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,10 +1,10 @@
-image: Visual Studio 2019
+image: Visual Studio 2022
 
 services:
   - iis
 
 install:
-  - choco install dotnet-aspnetcoremodule-v2
+  - choco install dotnet-aspnetcoremodule-v2 choco install dotnet-aspnetcoremodule-v2 --version=15.0.21297
 
 build_script:
   - powershell -File .\Run.ps1
