Ensured we're using in-process (for now).

--- a/LocalIIS/Properties/launchSettings.json
+++ b/LocalIIS/Properties/launchSettings.json
@@ -2,7 +2,8 @@
   "profiles": {
     "IIS": {
       "commandName": "IIS",
-      "launchBrowser": true
+      "launchBrowser": true,
+      "ancmHostingModel": "InProcess"
     }
   },
   "iisSettings": {
